# python-ffmpegio

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.rst  ffprobe_h.txt  make.bat  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE /: bug_report.md  enhancement-proposal-template.md  feature_request.md
.github/SSUE_TEMPLATE /: bug_report.md
.github/workflows/: debug.yml  pub_docs.yml  pub_pypi.yml  test.yml  test_n_pub.yml
docs/: .buildinfo  adv-args.html  adv-ffmpeg.html  analysis.html  api.html  basicio.html  caps.html  concat.html  devices.html  filtergraph.html  filters.html  finder_ffdl.html  genindex.html  get_started.html  index.html  install.html  intro.html  links.html  mpl-writer.html  objects.inv  options.html  probe.html  py-modindex.html  quick.html  rawdata_numpy.html  search.html  searchindex.js
docs/_sources/: analysis.rst.txt  api.rst.txt  basicio.rst.txt  caps.rst.txt  concat.rst.txt  filtergraph.rst.txt  filters.rst.txt  index.rst.txt  install.rst.txt  intro.rst.txt  mpl-writer.rst.txt  options.rst.txt  probe.rst.txt  quick.rst.txt  rawdata_numpy.rst.txt
docsrc/: adv-args.rst  adv-ffmpeg.rst  adv-io.rst  analysis.rst  api.rst  basicio.rst  conf.py  detect.rst  devices.rst  filtergraph.rst  finder_ffdl.rst  index.rst  install.rst  links.rst  options.rst  probe.rst  quick.rst  rawdata_mpl.rst  requirements.txt
docsrc/_static/css/: custom.css
docsrc/examples/: audio_create.py  plotting.ipynb  video_create.py
sandbox/: asegment.py  list_numpy_dtypes.py  pylon.py  so73654626.py  so73664645.py  test_ffmpegio.py  test_ffmpegque.py  test_pipeio.py  test_queueio.py  try_audio.py  try_concat.py  try_ffprobe.py  try_filter.py  try_filtered_videoout.py  try_hw_device.py  try_largeavi.py  try_matroska.py  try_pipeio.py  try_progbar.py  try_progress.py  try_rtsp.py  try_stream_reader.py  try_video.py  try_webcam.py
src/: __init__.py  audio.py  caps.py  ffmpeg.py  image.py  probe.py  transcode.py  utils.py  video.py
src/ffmpegio/: __init__.py  _open.py  _std_runners.py  _typing.py  _utils.py  actions.py  analyze.py  audio.py  caps.py  configure.py  devices.py  errors.py  ffmpeg.py  ffmpegprocess.py  filter_utils.py  filtergraph.py  image.py  io.py  macros.py  media.py  path.py  probe.py  rcparams.py  rcsetup.py  std_runners.py  stream_spec.py  threading.py  transcode.py  typing.py  utils.py  video.py
src/ffmpegio/_utils/: queue_pausable.py  threaded_pipe.py
src/ffmpegio/filtergraph/: Chain.py  Filter.py  Graph.py  GraphLinks.py  __init__.py  _combine.py  _convert.py  abc.py  build.py  convert.py  exceptions.py  presets.py  typing.py  util.py  utils.py
src/ffmpegio/plugins/: __init__.py  finder_ffdl.py  finder_static.py  finder_syspath.py  finder_win32.py  hookspecs.py  rawdata_bytes.py  rawdata_mpl.py  rawdata_numpy.py  rawdata_pil.py  rawdata_pillow.py
src/ffmpegio/plugins/devices/: dshow.py
src/ffmpegio/streams/: AviStreams.py  BaseFFmpegRunner.py  PipedStreams.py  SimpleStreams.py  SimpleVideoReader.py  StdStreams.py  StreamMerger.py  __init__.py  mixins.py  open.py  ostream_simple.py  ostream_simple_rev.py  runners.py  typing.py
src/ffmpegio/utils/: __init__.py  _docstring.py  avi.py  concat.py  error.py  fglinks.py  filter.py  log.py  mkl.py  parser.py  pipe_nonblock.py  queue_pausable.py  threaded_pipe.py  typing.py
src/streams/: ostream_simple.py  ostream_simple_rev.py
tests/: _create_assets.py  _test_io.py  _test_queue_pausable.py  conftest.py  demo_actions1.py  demo_actions2.py  requirements.txt  test_actions.py  test_analyze.py  test_audio.py  test_avistreams.py  test_caps.py  test_configure.py  test_devices.py  test_devices_dshow.py  test_errors.py  test_ffmpeg.py  test_ffmpegprocess.py  test_filter_utils.py  test_filtergraph.py  test_filtergraph_abc.py  test_filtergraph_build.py  test_filtergraph_chain.py  test_filtergraph_convert.py  test_filtergraph_fglinks.py  test_filtergraph_filter.py  test_filtergraph_presets.py  test_filters.py  test_image.py  test_io.py  test_media.py  test_open.py  test_packets.py  test_path.py  test_pipedstreams.py  test_plugins.py  test_probe.py  test_queue_pausable.py  test_rawdata_pillow.py  test_rcparams.py  (+19 more)
tests/assets/: ffmpeg_v5.1.2.txt  ffmpeg_v6.1.1.txt  ffmpeg_v7.0.1.txt  ffprobe_v5.1.2.txt  ffprobe_v6.1.1.txt  ffprobe_v7.0.1.txt  test.srt
tests/docsrc/: conf.py  index.rst
tests/plugins/: test_rawdata_pillow.py
