[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ffmpegio-core"
description = "Media I/O with FFmpeg"
readme = "README.rst"
keywords = ["multimedia, ffmpeg"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["pluggy", "packaging"]

[project.urls]
Repository = "https://github.com/python-ffmpegio/python-ffmpegio"
Documentation = "https://python-ffmpegio.github.io/python-ffmpegio/"
Discussions = "https://github.com/python-ffmpegio/python-ffmpegio/discussions"
Issues = "https://github.com/python-ffmpegio/python-ffmpegio/issues"
Pull_Requests = "https://github.com/python-ffmpegio/python-ffmpegio/pulls"

[tool.setuptools.dynamic]
version = { attr = "ffmpegio.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
# minversion = "6.0"
# addopts = "-ra -q"
