[metadata]
name = ffmpegio
version = 0.0.3
description = Read/write media files with FFmpeg
long_description = Read/write media files with FFmpeg; file: LICENSE
keywords = multimedia
license = GPL-2.0 License
url=https://github.com/tikuma-lsuhsc/python-ffmpeg-io
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=ffmpegio,ffmpegio.streams
install_requires =
    numpy
