[metadata]
name = ffmpegio
version = 0.0.6
description = Read/write media files with FFmpeg
long_description = Read/write media files with FFmpeg; file: LICENSE
keywords = multimedia
license = GPL-2.0 License
url=https://tikuma-lsuhsc.github.io/python-ffmpegio
project_urls=
    Repository=https://github.com/tikuma-lsuhsc/python-ffmpegio
    Discussions=https://github.com/tikuma-lsuhsc/python-ffmpegio/discussions
    Issues=https://github.com/tikuma-lsuhsc/python-ffmpegio/issues
    Pull Requests=https://github.com/tikuma-lsuhsc/python-ffmpegio/pulls
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video
    Topic :: Multimedia :: Video :: Capture
    Topic :: Multimedia :: Video :: Conversion
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=ffmpegio,ffmpegio.streams
install_requires =
    numpy
